src/styles/CartPopUp.css
/* .cart-pop-up-container {
    position: absolute;
    z-index: 1000;
    width: 320px;
    height: 95%;
    right: 0;
    background-color: #D3CEC7;
  } */
  
  .cart-pop-up-overlay {
    position: fixed;
    height: 100%;
    width: 100%;
    left: 0;
    overflow: hidden;
    z-index: 200;
    background-color: #1f1f1f;
    opacity: 0.5;
    transition: 0.5s;
  }
  
  .cart-pop-up-container > * {
    z-index: 200;
  }
  
  .hidden {
    display: none;
    opacity: 0;
  }
  
  .cart-pop-up-content-container {
    position: fixed;
    height: 100vh;
    width: 320px;
    right: 0;
    z-index: 250;
    background-color: #D3CEC7;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  
  .cart-pop-up-overlay-header {
    position: absolute;
    top: 8%;
    font-size: 15px;
    text-align: center;
    color: #000;
  }
  
  .cart-pop-up-overlay-header > h3 {
    margin-bottom: 1%;
    font-weight: 500;
    letter-spacing: 1px;
    font-size: 1.1vw;
  }
  
  .cart-pop-up-overlay-header-underline {
    position: absolute;
    top: 12%;
    width: 20%;
    height: 1px;
    background-color: #000;
  }

  .cart-pop-up-current-item {
    width: 80%;
    height: 70%;
  }

  .cart-pop-up-item {
    display: flex;
    flex-direction: row;
    width: 100%;
    padding-bottom: 1.5vw;
    border-bottom: 0.1vw solid #1f1f1f;
    margin-bottom: 1.5vw;
  }

  .cart-pop-up-item-img {
    width: 32%;
    margin-right: 2vw;
  }

  .cart-pop-up-item-img > img {
    width: 100%;
    display: block;
  }

  .cart-pop-up-item-delete {
    width: 4%;
    position: absolute;
    right: 9.5%;
  }

  .cart-pop-up-item-delete:hover {
    cursor: pointer;
  }
  
  .cart-pop-up-overlay-exit-btn {
    position: absolute;
    top: 2%;
    right: 6%;
    color: #000;
  }
  
  .cart-pop-up-overlay-exit-btn > h3 {
    margin: 0;
    font-weight: 500;
    letter-spacing: 1px;
  }
  
  .cart-pop-up-overlay-exit-btn:hover {
    cursor: pointer;
  }
  
  .cart-pop-up-overlay-bag-btn {
    position: absolute;
    bottom: 10%;
    border: solid;
    border-width: thin;
    width: 11vw;
    padding: 0.2vw 0.5vw;
    text-align: center;
    color: #000;
  }
  
  .cart-pop-up-overlay-bag-btn > a > * {
    letter-spacing: 2px;
    font-size: 1.1vw;
    color: #000;
  }
  
  /* @media (max-width: 480px) {
    .video-container {
      height: 75vh;
      width: 100vw;
    }
  } */
  

